--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@types/body-scroll-lock": "^2.6.1",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
-    "@vitejs/plugin-vue": "^1.1.0",
+    "@vitejs/plugin-vue":  "^4.0.0",
     "@vue/babel-preset-app": "^4.5.6",
     "@vue/babel-preset-jsx": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.5",
@@ -84,21 +84,21 @@
     "postcss": "^8.4.6",
     "prettier": "^2.2.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
-    "stylelint": "^13.11.0",
+    "stylelint": "^16.10.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^20.0.0",
     "tailwindcss": "^3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
-    "vite": "^2.0.0-beta.40",
+    "vite": "^5.4.10",
     "vite-plugin-dts": "^1.7.2",
-    "vitest": "^0.5.9",
+    "vitest": "^2.1.3",
     "vue-eslint-parser": "^7.5.0"
   },
   "dependencies": {
     "@floating-ui/dom": "^0.5.4",
     "@vueuse/core": "^5.0.3",
-    "@vueuse/integrations": "^5.0.3",
+    "@vueuse/integrations": "^11.1.0",
     "body-scroll-lock": "^3.1.5",
     "colord": "^2.9.2",
     "tailwind-merge": "^1.13.2",
